# MOCHA

./: README.md
Paper/: Temp.tex
assets/: README.md  VIDEO_GUIDE.md
src/GHOST Planner/: CMakeLists.txt  package.xml
src/GHOST Planner/action/: GlobalPlan.action
src/GHOST Planner/config/: global_planner.yaml
src/GHOST Planner/include/ghost planner/: cgal_homotopy_planner.hpp  global_planner_action_server.hpp  mocha_optimizer.hpp  mocha_types.hpp  random_cylinder_publisher.hpp  verifation_global_planner.hpp
src/GHOST Planner/launch/: verification_global_system.launch.py
src/GHOST Planner/msg/: CommittedTrajectory.msg  ControlPath.msg  Trajectory.msg
src/GHOST Planner/rviz/: global_planner.rviz
src/GHOST Planner/src/: cgal_homotopy_planner.cpp  fake_robot_tf_publisher.cpp  global_planner_action_server.cpp  mocha_optimizer.cpp  random_cylinder_publisher.cpp  verifation_global_planner.cpp
